Fixed offcentered menu

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -3,9 +3,9 @@
   width: 100%;
   height: 100%;
   position: fixed;
-  z-index: 100;
   top: 0;
   left: 0;
+  z-index: 100;
   
   background: #f4282d;
   color: #f2f2f2;
@@ -13,17 +13,22 @@
   text-align: center;
 }
 
+.text {
+  height: 100%;
+  display: grid;
+  
+}
+
 ul {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  align-self: center;
+  justify-self: center;
+  padding: 0;
 }
 
 ul li {
   list-style-type: none;
   margin: 20px 0;
-  font-size: 26px;
+  font-size: 30px;
   transition: all 0.2s ease;
   cursor: pointer;
 }
