--- a/css/preloader.css
+++ b/css/preloader.css
@@ -21,16 +21,12 @@
 	text-shadow: 3px 1px 10px #202020;
 }
 
-/* ----------------------------------------------
- * Generated by Animista on 2018-10-23 14:25:33
- * w: http://animista.net, t: @cssanimista
- * ---------------------------------------------- */
+@media screen and (max-width: 600px) {
+	.preloader h1 {
+		font-size: 45px;
+	}
+}
 
-/**
- * ----------------------------------------
- * animation heartbeat
- * ----------------------------------------
- */
  @keyframes heartbeat {
   from {
     transform: scale(1);
@@ -53,36 +49,4 @@
     transform: scale(1);
     animation-timing-function: ease-out;
   }
-}
-
-
-@keyframes jello-horizontal {
-	0% {
-	  transform: scale3d(1, 1, 1);
-	}
-	30% {
-	  transform: scale3d(1.25, 0.75, 1);
-	}
-	40% {
-	  transform: scale3d(0.75, 1.25, 1);
-	}
-	50% {
-	  transform: scale3d(1.15, 0.85, 1);
-	}
-	65% {
-	  transform: scale3d(0.95, 1.05, 1);
-	}
-	75% {
-	  transform: scale3d(1.05, 0.95, 1);
-	}
-	100% {
-	  transform: scale3d(1, 1, 1);
-	}
-}
-
-@media screen and (max-width: 600px) {
-	
-	.preloader h1 {
-		font-size: 45px;
-	}
 }
